# evozero

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  codecov.yml  noxfile.py  pyproject.toml
benchmarks/: AUTOMLZERO.md  BENCHMARK.md  ab_selection.py  automlzero_bench.py  bench_large_n.py  benchmark.py  fair_compare.py
docs/: api.md  blueprint.md  conf.py  index.md  installation.md  quickstart.md
docs/concepts/: how_it_works.md
docs/guide/: automl_zero.md  dashboard.md  symbolic_regression.md
examples/: quickstart.py
src/evozero/: __init__.py  _device.py  _import_utils.py  cli.py
src/evozero/automlzero/: __init__.py
src/evozero/core/: __init__.py  _automlzero_engine.py  _sr_engine.py
src/evozero/dashboard/: __init__.py  server.py
src/evozero/dashboard/_static/: index.html
src/evozero/sr/: __init__.py  estimator.py
tests/: conftest.py  test_api.py  test_automlzero.py  test_cli.py  test_dashboard.py  test_device.py  test_gpu.py  test_sklearn.py  test_sr.py
tests/property/: test_engine.py
web/: index.html
